--- a/app/src/main/res/layout/fragment_loan_request_success.xml
+++ b/app/src/main/res/layout/fragment_loan_request_success.xml
@@ -25,22 +25,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Заявка на заём успешно оформлена"
-            android:textSize="25sp"
-            android:gravity="center"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"/>
+            android:layout_marginRight="20dp"
+            style="@style/WhiteTitle"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Изменения статуса заявки на заём отслеживайте в разделе Займы"
-            android:textSize="20sp"
-            android:gravity="center"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="30dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"/>
+            android:layout_marginRight="20dp"
+            style="@style/WhiteText"/>
 
     </LinearLayout>
 
