--- a/app/src/main/res/layout/activity_loan_request.xml
+++ b/app/src/main/res/layout/activity_loan_request.xml
@@ -6,10 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".ui.LoanRequestActivity">
 
+    <include
+        android:id="@+id/loanRequestActionBar"
+        layout="@layout/loan_request_action_bar" />
+
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/requestActivityProgressBar"
+        style="@style/CommonProgressBarStyle"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/loanRequestContainer"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/loanRequestActionBar"
         app:layout_constraintBottom_toTopOf="@id/loanRequestButtonContainerConLay"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -40,7 +45,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/loanRequestOkBtn"
             android:text="ok"
-            android:textSize="15sp"
+            style="@style/CommonButton.DarkPurple"
             android:layout_margin="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -54,7 +59,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/applyLoanBtn"
             android:text="apply loan"
-            android:textSize="15sp"
+            style="@style/CommonButton.DarkPurple"
             android:layout_margin="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -68,7 +73,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/loanRequestContinueBtn"
             android:text="continue"
-            android:textSize="15sp"
+            style="@style/CommonButton.DarkPurple"
             android:layout_margin="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
