--- a/app/src/main/res/layout/loan_conditions_fragment.xml
+++ b/app/src/main/res/layout/loan_conditions_fragment.xml
@@ -6,130 +6,106 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.LoanConditionsFragment">
 
-    <ProgressBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/loanConditionsProgressBar"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:alpha="0"/>
-
     <ScrollView
+        android:id="@+id/loanConditionsScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/loanConditionsScrollView"
-        android:scrollbars="none"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:scrollbars="none">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <LinearLayout
+                android:id="@+id/loanConditionsAmountLinLay"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
                 android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/loanConditionsAmountLinLay"
-                android:orientation="vertical"
-                android:elevation="2dp"
-                android:background="@color/white"
-                android:layout_margin="10dp">
-
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
                     android:id="@+id/loanConditionsAmountTxt"
-                    android:text="Сумма займа"
-                    android:textSize="20sp"
-                    android:gravity="start"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="30dp"/>
-
-                <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/loanConditionsAmountValueTxt"
-                    android:text="10000"
-                    android:textSize="40sp"
-                    android:gravity="start"
+                    android:layout_marginLeft="30dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginLeft="30dp"/>
+                    style="@style/LoanDetail.Title"
+                    android:text="Сумма займа"/>
+
+                <TextView
+                    android:id="@+id/loanConditionsAmountValueTxt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginTop="10dp"
+                    style="@style/LoanDetail.Value"/>
 
                 <SeekBar
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
                     android:id="@+id/loanConditionsAmountSeekBar"
-                    android:min="100"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"/>
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="30dp"
+                    android:layout_marginBottom="10dp"
+                    android:min="100"
+                    style="@style/LoanDetail.SeekBar"/>
 
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:id="@+id/loanConditionsPeriodLinLay"
-                android:orientation="vertical"
-                android:elevation="2dp"
-                android:background="@color/white"
-                android:layout_margin="10dp">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:orientation="vertical">
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
                     android:id="@+id/loanConditionsPeriodTxt"
-                    android:text="Срок займа"
-                    android:textSize="20sp"
-                    android:gravity="start"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="30dp"/>
-
-                <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginTop="10dp"
+                    android:text="Срок займа"
+                    style="@style/LoanDetail.Title"/>
+
+                <TextView
                     android:id="@+id/loanConditionsPeriodValueTxt"
-                    android:text="10000"
-                    android:textSize="40sp"
-                    android:gravity="start"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="30dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
-                    android:layout_marginLeft="30dp"/>
+                    style="@style/LoanDetail.Value"/>
 
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/loanConditionsPerCentLinLay"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/loanConditionsPerCentLinLay"
-                android:orientation="vertical"
-                android:elevation="2dp"
-                android:background="@color/white"
-                android:layout_margin="10dp">
+                android:layout_margin="10dp"
+                android:orientation="vertical">
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
                     android:id="@+id/loanConditionsPercentTxt"
-                    android:text="Процентная ставка"
-                    android:textSize="20sp"
-                    android:gravity="start"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="30dp"/>
-
-                <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginTop="10dp"
+                    android:text="Процентная ставка"
+                    style="@style/LoanDetail.Title"/>
+
+                <TextView
                     android:id="@+id/loanConditionsPercentValueTxt"
-                    android:text="10%"
-                    android:textSize="40sp"
-                    android:gravity="start"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="30dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
-                    android:layout_marginLeft="30dp"/>
+                    style="@style/LoanDetail.Value"/>
 
             </LinearLayout>
 
