--- a/app/src/main/res/layout/loan_personal_data_fragment.xml
+++ b/app/src/main/res/layout/loan_personal_data_fragment.xml
@@ -22,8 +22,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:elevation="2dp"
-                android:background="@color/white"
                 android:layout_margin="10dp">
 
                 <TextView
@@ -31,25 +29,22 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/loanPersonalDataFirstNameTxt"
                     android:text="Введите имя"
-                    android:textSize="20sp"
-                    android:gravity="start"
                     android:layout_marginTop="10dp"
                     android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"/>
+                    android:layout_marginRight="30dp"
+                    style="@style/LoanDetail.Title"/>
 
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/loanPersonalDateEnterFirstNameEdtTxt"
                     android:hint="First name"
-                    android:textSize="25sp"
-                    android:lines="1"
-                    android:maxLines="1"
                     android:inputType="text"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"/>
+                    android:layout_marginRight="30dp"
+                    style="@style/CommonEditText"/>
 
             </LinearLayout>
 
@@ -57,8 +52,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:elevation="2dp"
-                android:background="@color/white"
                 android:layout_margin="10dp">
 
                 <TextView
@@ -66,25 +59,22 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/loanPErsonalDataLastNameTxt"
                     android:text="Введите фамилию"
-                    android:textSize="20sp"
-                    android:gravity="start"
                     android:layout_marginTop="10dp"
                     android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"/>
+                    android:layout_marginRight="30dp"
+                    style="@style/LoanDetail.Title"/>
 
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/loanPersonalDateEnterLastNameEdtTxt"
                     android:hint="Second name"
-                    android:textSize="25sp"
-                    android:lines="1"
-                    android:maxLines="1"
                     android:inputType="text"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"/>
+                    android:layout_marginRight="30dp"
+                    style="@style/CommonEditText"/>
 
             </LinearLayout>
 
@@ -92,8 +82,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:elevation="2dp"
-                android:background="@color/white"
                 android:layout_margin="10dp">
 
                 <TextView
@@ -101,25 +89,22 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/loanPersonalDataPhoneNumberTxt"
                     android:text="Введите номер телефона"
-                    android:textSize="20sp"
-                    android:gravity="start"
                     android:layout_marginTop="10dp"
                     android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"/>
+                    android:layout_marginRight="30dp"
+                    style="@style/LoanDetail.Title"/>
 
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/loanPersonalDateEnterPhoneNumberEdtTxt"
                     android:hint="Phone number"
-                    android:textSize="25sp"
-                    android:lines="1"
-                    android:maxLines="1"
                     android:inputType="phone"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"/>
+                    android:layout_marginRight="30dp"
+                    style="@style/CommonEditText"/>
 
             </LinearLayout>
 
